--- a/user-profile.html
+++ b/user-profile.html
@@ -61,104 +61,105 @@
   <div class="grid lg:grid-cols-12 md:grid-cols-12 sm:grid-cols-12 xl:grid-cols-12 min-h-screen">
     <div class="lg:col-span-3 md:col-span-4 sm:col-span-3 xl:col-span-3">
       <aside id="sidebar"
-      class="fixed z-40 top-0 left-0 w-64 xl:w-80 md:w-64 h-full bg-gradient-to-b from-blue-700 to-blue-800 shadow-md text-white transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out">
-      <div class="flex items-center justify-between p-4 md:justify-center">
-        <h1 class="text-xl font-bold">AMS</h1>
-        <button id="closeSidebar" class="md:hidden">
-          <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-          </svg>
-        </button>
-      </div>
-      <nav class="space-y-2 px-4 text-center">
-        <a href="./dashboard.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-            <path d="M3 10l9-7 9 7v8a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2v-4H9v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-8z"
-              stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-          Dashboard
-        </a>
-        <div class="relative">
-          <button onclick="toggleDropdown('attendanceDropdown')"
-            class="flex items-center justify-between w-full gap-3 p-3 rounded-lg hover:bg-blue-500">
-            <div class="flex items-center gap-3">
-              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                <path
-                  d="M8 7V3m8 4V3m-9 8h10m-12 8h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z"
-                  stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-              Attendance
-            </div>
-            <svg class="w-4 h-4 transition-transform" id="attendanceIcon" fill="none" stroke="currentColor"
-              viewBox="0 0 24 24" stroke-width="2">
-              <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
+        class="fixed z-40 top-0 left-0 w-64 xl:w-80 md:w-64 h-full bg-gradient-to-b from-blue-700 to-blue-800 shadow-md text-white transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out">
+        <div class="flex items-center justify-between p-4 md:justify-center">
+          <h1 class="text-xl font-bold">AMS</h1>
+          <button id="closeSidebar" class="md:hidden">
+            <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
             </svg>
           </button>
-          <div id="attendanceDropdown" class="hidden flex-col mt-2 bg-blue-800">
-            <a href="./mark-attendence.html"
-              class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Mark
-              Attendance</a>
-            <a href="./attendance-record.html"
-              class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Attendance
-              Record</a>
-          </div>
         </div>
-        <div class="relative">
-          <button onclick="toggleDropdown('leavesDropdown')"
-            class="flex items-center justify-between w-full gap-3 p-3 rounded-lg hover:bg-blue-500">
-            <div class="flex items-center gap-3">
-              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                <path
-                  d="M9 5h6a2 2 0 0 1 2 2v0a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2v0a2 2 0 0 1 2-2z"
-                  stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M9 14h6m-6-4h6" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-              Leaves
-            </div>
-            <svg class="w-4 h-4 transition-transform" id="leavesIcon" fill="none" stroke="currentColor"
-              viewBox="0 0 24 24" stroke-width="2">
-              <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
+        <nav class="space-y-2 px-4 text-center">
+          <a href="./dashboard.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path d="M3 10l9-7 9 7v8a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2v-4H9v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-8z"
+                stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-          </button>
-          <div id="leavesDropdown" class="hidden flex-col mt-2 bg-blue-800">
-            <a href="./leave.html" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Apply for
-              Leave</a>
-            <a href="./leave-record.html"
-              class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Leave
-              Record</a>
+            Dashboard
+          </a>
+          <div class="relative">
+            <button onclick="toggleDropdown('attendanceDropdown')"
+              class="flex items-center justify-between w-full gap-3 p-3 rounded-lg hover:bg-blue-500">
+              <div class="flex items-center gap-3">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                  <path
+                    d="M8 7V3m8 4V3m-9 8h10m-12 8h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                Attendance
+              </div>
+              <svg class="w-4 h-4 transition-transform" id="attendanceIcon" fill="none" stroke="currentColor"
+                viewBox="0 0 24 24" stroke-width="2">
+                <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </button>
+            <div id="attendanceDropdown" class="hidden flex-col mt-2 bg-blue-800">
+              <a href="./mark-attendence.html"
+                class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Mark
+                Attendance</a>
+              <a href="./attendance-record.html"
+                class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Attendance
+                Record</a>
+            </div>
           </div>
-        </div>
-        <a href="./fee-structure.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-            <path d="M2 7h20M2 10h20M4 17h4m6 0h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2z"
-              stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-          Fees
-        </a>
-        <a href="./fine.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-            <path
-              d="M12 9v2m0 4h.01M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
-              stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-          Fines
-        </a>
-        <a href="./notification.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-            <path
-              d="M15 17h5l-1.41-1.41A2 2 0 0 1 18 14.16V11a6 6 0 0 0-5-5.92V4a2 2 0 1 0-4 0v1.08A6 6 0 0 0 4 11v3.16c0 .54-.22 1.06-.59 1.44L2 17h5m5 0v1a3 3 0 1 1-6 0v-1h6z"
-              stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-          Notifications
-        </a>
-        <a href="./add-new-student.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-            <path d="M12 4v16m8-8H4" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-          Add Student
-        </a>
-      </nav>
-    </aside>
+          <div class="relative">
+            <button onclick="toggleDropdown('leavesDropdown')"
+              class="flex items-center justify-between w-full gap-3 p-3 rounded-lg hover:bg-blue-500">
+              <div class="flex items-center gap-3">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                  <path
+                    d="M9 5h6a2 2 0 0 1 2 2v0a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2v0a2 2 0 0 1 2-2z"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M9 14h6m-6-4h6" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                Leaves
+              </div>
+              <svg class="w-4 h-4 transition-transform" id="leavesIcon" fill="none" stroke="currentColor"
+                viewBox="0 0 24 24" stroke-width="2">
+                <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </button>
+            <div id="leavesDropdown" class="hidden flex-col mt-2 bg-blue-800">
+              <a href="./leave.html"
+                class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Apply for
+                Leave</a>
+              <a href="./leave-record.html"
+                class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Leave
+                Record</a>
+            </div>
+          </div>
+          <a href="./fee-structure.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path d="M2 7h20M2 10h20M4 17h4m6 0h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2z"
+                stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Fees
+          </a>
+          <a href="./fine.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path
+                d="M12 9v2m0 4h.01M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
+                stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Fines
+          </a>
+          <a href="./notification.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path
+                d="M15 17h5l-1.41-1.41A2 2 0 0 1 18 14.16V11a6 6 0 0 0-5-5.92V4a2 2 0 1 0-4 0v1.08A6 6 0 0 0 4 11v3.16c0 .54-.22 1.06-.59 1.44L2 17h5m5 0v1a3 3 0 1 1-6 0v-1h6z"
+                stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Notifications
+          </a>
+          <a href="./add-new-student.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path d="M12 4v16m8-8H4" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Add Student
+          </a>
+        </nav>
+      </aside>
     </div>
     <div class="lg:col-span-9 sm:col-span-9 xl:col-span-9 md:col-span-8  space-y-6 mt-5 p-5">
       <div class="relative bg-white rounded-lg shadow overflow-hidden">
@@ -272,6 +273,39 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="bg-white p-4 rounded-lg shadow-md">
+        <h1 class="text-lg font-semibold">Change Password</h1>
+        <div class="grid grid-cols-12">
+          <div class="col-span-12 md:col-span-4 lg:col-span-4">
+            <div class="lg:w-64 mt-3">
+              <input list="emails" id="email" name="email" placeholder="Type to search email..."
+                class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+              <datalist id="emails">
+                <option value="john@example.com">
+                <option value="jane@example.com">
+                <option value="admin@example.com">
+                <option value="support@yourapp.com">
+                <option value="info@yourcompany.com">
+              </datalist>
+            </div>
+          </div>
+          <div class="col-span-12 md:col-span-4 lg:col-span-4">
+            <div class="mt-3 lg:w-64">
+              <input type="password" name="" id="" placeholder="Enter password"
+                class="border border-gray-300 p-2 w-full rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+            </div>
+          </div>
+          <div class="col-span-12 md:col-span-4 lg:col-span-4">
+            <div class="lg:w-64 mt-3">
+              <input type="password" name="" id="" placeholder="Confirm password"
+                class="border border-gray-300 p-2 w-full rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+            </div>
+          </div>
+        </div>
+        <div class="mt-5 lg:text-end sm:text-center">
+          <button type="submit" class="bg-blue-600 text-white p-2 rounded-lg ">Generate Password</button>
         </div>
       </div>
     </div>
